--- a/src/app/add-todo/add-todo.component.html
+++ b/src/app/add-todo/add-todo.component.html
@@ -1,1 +1,14 @@
-<p>add-todo works!</p>
+<div class="container">
+  <h2>Add Todo</h2>
+  <mat-card>
+    <form [formGroup]="form" (ngSubmit)="form.valid && addTodo()">
+      <mat-form-field appearance="outline">
+        <input formControlName="title" matInput placeholder="Title" />
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <input formControlName="description" matInput placeholder="Description" />
+      </mat-form-field>
+      <button mat-raised-button type="submit" color="primary">Add Todo</button>
+    </form>
+  </mat-card>
+</div>
