--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,12 @@
 <div class="container">
-  <button class="add-todo-btn" mat-raised-button color="primary">Add Todo</button>
-  <mat-card>
-    <p>My todo</p>
-    <button mat-stroked-button color="primary">Mark as Complete</button>
-  </mat-card>
-</div>>
+  <button (click)="addTodo()" class="add-todo-btn" mat-raised-button color="primary">
+    Add Todo
+  </button>
+  <mat-spinner *ngIf="loading"></mat-spinner>
+  <ng-container *ngIf="!loading">
+    <mat-card *ngFor="let todo of todos">
+      <p>{{todo.title}}</p>
+      <button mat-stroked-button color="primary">Mark as Complete</button>
+    </mat-card>
+  </ng-container>
+</div>
